crates/plotnik-tests/tests/04-emit/types/alternations/error_conflicting_ref_types_across_alternatives.txt
Row = (pair
  key: (_) @key
  value: (_) @val
)

Name = (property_identifier) @name

Q = (program
  (expression_statement
    (parenthesized_expression
      (object
        [
          (Row) @x
          (Name) @x
        ]
      )
    )
  )
)
------------------ DIAGNOSTICS -------------------
error: `@x` has incompatible types `Row` and `Name` across alternatives
  --> query.ptk:13:17
   |
13 |           (Row) @x
   |                 ^^
14 |           (Name) @x
   |                  -- `@x` has type `Name` here
   |
help: make every alternative produce the same type, or label the alternatives for a variant type
